<resources>
    <string name="app_name">QWSeizure</string>
    <string name="action_settings">Settings</string>

    <string name="tobacco">Tobacco</string>
    <string name="cigars">Cigars</string>
    <string name="cigarettes">Cigarettes</string>
    <string name="class_a">Drugs</string>
    <string name="weapons">Weapons</string>
    <string name="alcohol">Alcohol</string>
    <string name="poao">POAnimalOrigin</string>
    <string name="misc">Misc</string>
    <string name="sign_in">Sign in</string>

    <string name="anyline_license_key" translatable="false">
eyJzY29wZSI6WyJBTEwiXSwicGxhdGZvcm0iOlsiaU9TIiwiQW5kcm9pZCIsIldpbmRvd3MiXSwidmFsaWQiOiIyMDE3LTEwLTE5IiwibWFqb3JWZXJzaW9uIjoiMyIsImlzQ29tbWVyY2lhbCI6ZmFsc2UsInRvbGVyYW5jZURheXMiOjYwLCJpb3NJZGVudGlmaWVyIjpbInVrLmdvdi5ib3JkZXJmb3JjZS5xd3NlaXp1cmUiXSwiYW5kcm9pZElkZW50aWZpZXIiOlsidWsuZ292LmJvcmRlcmZvcmNlLnF3c2VpenVyZSJdLCJ3aW5kb3dzSWRlbnRpZmllciI6WyJ1ay5nb3YuYm9yZGVyZm9yY2UucXdzZWl6dXJlIl19ClBuMEgxSWM3T2pyTmF6L0p4ZVRrSXhqSGVzTFYzUEpUM1R3bUVvUkJVRUY5TVRUSFZVQ0IreUNCOWFGRVZZYUh5aVAweVZTVThvdmRPdkdZTVB2dkxyVGRIRUNoZVlyYVZyalBTdnBwc0hqSGl5elQvRlJPeEZiblVPTE5kTmZQeGo3NjNzQXBrbjRoazZHY29TUGVJZ3RDbWFtRDlSZzNHY0tjdzczRGozVDdNNG5HNHdIdDlpNzkxakpuMC9pWTEvMEVkUmlLYmpJSll1Z0wyRjJCNnBWTGNvaDVoSS9qR0Z3T0dldFgvNHVibWJUVlhVOVUrcHNSWUpVdFZybUhENkowSGRpQ1JxS01pZmdtbzdWQVF5V1hTVUtwOCtrN3BHYW1zVVVoZ0s4T2ZGb2N5RTFrcHpMUHRrOENFcEVRMGM3WWJ4ODhQV2xYTThzMStUWlVrZz09
    </string>

    <string-array name="goods_type">
        <item>cigarettes</item>
        <item>tobacco</item>
        <item>class-A</item>
        <item>weapon</item>
    </string-array>

    <string-array name="tobacco_units">
        <item>grams</item>
        <item>kilograms</item>
        <item>tons</item>
    </string-array>

    <string-array name="cigarettes_units">
        <item>cigarettes</item>
        <item>200 box</item>
        <item>20 pack</item>
    </string-array>

    <string name="title_activity_seized_goods">SeizedGoodsActivity</string>

    <string name="title_activity_scan_travel_document">ScanTravelDocumentActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_pickup_for_lockup">PickupForLockup</string>
</resources>
