<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    app:layout_scrollFlags="scroll|enterAlways|snap">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="Summary" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seizure_type"
                android:checkedButton="@+id/radio_cigarettes">
                <RadioButton android:id="@+id/radio_tobacco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tobacco"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_cigarettes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cigarettes"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_cigars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cigars"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_class_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_a"
                android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_weapon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weapons"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_poao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poao"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_misc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/misc"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_alcohol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alcohol"
                    android:onClick="onRadioButtonClicked"/>

                </RadioGroup>

            <include layout="@layout/datetimelayout" />


            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/seized_quantity_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></LinearLayout>

            <!--<include layout="@layout/cigarettes_quantity" />-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/seized_from_text"
                    android:layout_width="280dp"
                    android:inputType="textPersonName"
                    android:layout_height="wrap_content"
                    android:hint="Person Id" />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/seized_from_text"
                    android:layout_alignBottom="@id/seized_from_text"
                    android:id="@+id/scan_person_id"
                    app:srcCompat="@android:drawable/ic_menu_camera" />
            </RelativeLayout>

            <include layout="@layout/scan_seal_barcode" />

            <EditText
                android:id="@+id/optText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:ems="10"
                android:inputType="text"
                android:hint="Optional"
                android:singleLine="false"
                android:selectAllOnFocus="true" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel" />

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Save" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
